--- a/www/templates/tvcontents.html
+++ b/www/templates/tvcontents.html
@@ -5,7 +5,7 @@
   <ion-content class="has-header">
     <ion-list>
       <ion-item ng-repeat="tvContent in tvContents" href="#/app/details/{{tvContent.id}}">
-        AAAAAA
+        {{tvContent.start}}-{{tvContent.end}}
       </ion-item>
     </ion-list>
   </ion-content>
