--- a/www/templates/details.html
+++ b/www/templates/details.html
@@ -4,13 +4,13 @@
   </ion-nav-buttons>
   <ion-content class="has-header">
       <ion-item>
-        {{details.film.title}}
+        {{details.title}}
       </ion-item>    
       <ion-item>
         {{details.start}} - {{details.end}}
       </ion-item>    
       <ion-item>
-        {{details.film.description}}
+        {{details.description}}
       </ion-item>    
   </ion-content>
 </ion-view>
