improving the navigation

--- a/www/templates/providers.html
+++ b/www/templates/providers.html
@@ -4,7 +4,7 @@
   </ion-nav-buttons>
   <ion-content class="has-header">
     <ion-list>
-      <ion-item ng-repeat="provider in providers" href="#/app/channels/{{provider.name}}">
+      <ion-item ng-repeat="provider in providers" href="#/app/options-by-providers/{{provider.name}}">
         {{provider.name}}
       </ion-item>
     </ion-list>
