--- a/www/templates/details.html
+++ b/www/templates/details.html
@@ -1,20 +1,24 @@
-<ion-view title="Details">
+<ion-view title="Details AA">
   <ion-nav-buttons side="left">
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
   <ion-content class="has-header">
-      <div class="list">
-  <div class="item item-icon-left">
-    <i class="icon ion-email"></i>
-    {{details.title}}
+  <div class="list">
+    <div class="item item-icon-left">
+      <i class="icon ion-email"></i>
+      {{details.type}}
+    </div>
+    <div class="item item-icon-left">
+      <i class="icon ion-email"></i>
+      {{details.title}}
+    </div>
+    <div class="item item-icon-left">
+      <i class="icon ion-email"></i>
+      {{details.st}} - {{details.et}}
+    </div>
+    <div class="item item-text-wrap">  
+      <p>{{details.description}}</p>
+    </div>
   </div>
-  <div class="item item-icon-left">
-    <i class="icon ion-email"></i>
-    <h6>{{details.start}} - {{details.end}}</h6>
-  </div>
-  <div class="item item-text-wrap">  
-    <p>{{details.description}}</p>
-  </div>
-</div>
   </ion-content>
 </ion-view>
