--- a/www/templates/details-program.html
+++ b/www/templates/details-program.html
@@ -12,7 +12,7 @@
       <i class="icon ion-email"></i>
       <h4>{{details.st}} - {{details.et}}</h4>
     </div>
-    <div class="item item-text-wrap">  
+    <div ng-show="details.program.description" class="item item-text-wrap">  
       <h4>{{details.program.description}}</h4>
     </div>
   </div>
