--- a/www/templates/details-series.html
+++ b/www/templates/details-series.html
@@ -8,19 +8,19 @@
       <i class="icon ion-email"></i>
       <h4>Series - {{details.series.serieTitle}}</h4>
     </div>
-    <div class="item item-icon-left">
+    <div ng-show="details.series.episodeTitle" class="item item-icon-left">
       <i class="icon ion-email"></i>
-      <h4>Episode Title - {{details.series.episodeTitle}}</h4>
+      <h4>Episode - {{details.series.episodeTitle}}</h4>
     </div>
-    <div class="item item-icon-left">
+    <div ng-show="details.series.seasonNumber" class="item item-icon-left">
       <i class="icon ion-email"></i>
       <h4>Season - {{details.series.seasonNumber}}</h4>
     </div>
-    <div class="item item-icon-left">
+    <div ng-show="details.series.episodeNumber" class="item item-icon-left">
       <i class="icon ion-email"></i>
       <h4>Episode Number - {{details.series.episodeNumber}}</h4>
     </div>
-    <div class="item item-icon-left">
+    <div ng-show="details.series.totalNumber" class="item item-icon-left">
       <i class="icon ion-email"></i>
       <h4>Total Number - {{details.series.totalNumber}}</h4>
     </div>
@@ -28,7 +28,7 @@
       <i class="icon ion-email"></i>
       <h4>{{details.st}} - {{details.et}}</h4>
     </div>
-    <div class="item item-text-wrap">  
+    <div ng-show="details.series.description" class="item item-text-wrap">  
       <h4>{{details.series.description}}</h4>
     </div>
   </div>
