--- a/www/templates/options-by-providers.html
+++ b/www/templates/options-by-providers.html
@@ -4,17 +4,17 @@
   </ion-nav-buttons>
   <ion-content class="has-header">
       <div class="list">
-      <a class="item item-icon-left" href="#/app/content-today/series/{{provider}}">
+      <a class="item item-icon-left" href="#/app/content-now/series/{{provider}}">
         <i class="icon ion-videocamera"></i>
-        Series today
+        Series right now
       </a>
-      <a class="item item-icon-left" href="#/app/content-today/film/{{provider}}">
+      <a class="item item-icon-left" href="#/app/content-now/film/{{provider}}">
         <i class="icon ion-videocamera"></i>
-        Films today
+        Films right now
       </a>
-      <a class="item item-icon-left" href="#/app/content-today/program/{{provider}}">
+      <a class="item item-icon-left" href="#/app/content-now/program/{{provider}}">
         <i class="icon ion-videocamera"></i>
-        Programs today
+        Programs right now
       </a>
       <a class="item item-icon-left" href="#/app/channels/{{provider}}">
         <i class="icon ion-monitor"></i>
