--- a/www/templates/details-series.html
+++ b/www/templates/details-series.html
@@ -1,31 +1,31 @@
-<ion-view title="Details AA">
+<ion-view title="Series">
   <ion-nav-buttons side="left">
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
   <ion-content class="has-header">
   <div class="list">
     <div class="item item-icon-left">
-      <i class="icon ion-email"></i>
-      <h4>Series - {{details.series.serieTitle}}</h4>
+      <i class="icon ion-ios7-videocam"></i>
+      {{details.series.serieTitle}}
     </div>
     <div ng-show="details.series.episodeTitle" class="item item-icon-left">
-      <i class="icon ion-email"></i>
+      <i class="icon ion-ios7-paper"></i>
       <h4>Episode - {{details.series.episodeTitle}}</h4>
     </div>
     <div ng-show="details.series.seasonNumber" class="item item-icon-left">
-      <i class="icon ion-email"></i>
+      <i class="icon ion-ios7-calendar"></i>
       <h4>Season - {{details.series.seasonNumber}}</h4>
     </div>
     <div ng-show="details.series.episodeNumber" class="item item-icon-left">
-      <i class="icon ion-email"></i>
+      <i class="icon ion-ios7-calendar"></i>
       <h4>Episode Number - {{details.series.episodeNumber}}</h4>
     </div>
     <div ng-show="details.series.totalNumber" class="item item-icon-left">
-      <i class="icon ion-email"></i>
+      <i class="icon ion-ios7-calendar"></i>
       <h4>Total Number - {{details.series.totalNumber}}</h4>
     </div>
     <div class="item item-icon-left">
-      <i class="icon ion-email"></i>
+      <i class="icon ion-ios7-time-outline"></i>
       <h4>{{details.st}} - {{details.et}}</h4>
     </div>
     <div ng-show="details.series.description" class="item item-text-wrap">  
