--- a/www/templates/details-program.html
+++ b/www/templates/details-program.html
@@ -1,15 +1,15 @@
-<ion-view title="Details AA">
+<ion-view title="Program">
   <ion-nav-buttons side="left">
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
   <ion-content class="has-header">
   <div class="list">
     <div class="item item-icon-left">
-      <i class="icon ion-email"></i>
-      <h4>Program - {{details.program.title}}</h4>
+      <i class="icon ion-ios7-videocam"></i>
+      {{details.program.title}}</h4>
     </div>
     <div class="item item-icon-left">
-      <i class="icon ion-email"></i>
+      <i class="icon ion-ios7-time-outline"></i>
       <h4>{{details.st}} - {{details.et}}</h4>
     </div>
     <div ng-show="details.program.description" class="item item-text-wrap">  
