--- a/www/templates/tvcontents.html
+++ b/www/templates/tvcontents.html
@@ -6,13 +6,13 @@
     <div class="list">
       <a ng-repeat="tvContent in tvContents" class="item item-icon-left" href="#/app/details/{{tvContent.id}}/{{tvContent.type}}">
         <div ng-show="tvContent.now == 0">
-          <i class="icon ion-email"></i>        
+          <i class="icon ion-ios7-star"></i>        
           <h4>{{tvContent.channel}} -  {{tvContent.type}}</h4> 
           <p>{{tvContent.title}}</p> 
           <p>{{tvContent.st}} - {{tvContent.et}}</p>          
         </div> 
         <div ng-show="tvContent.now == 1">
-          <i class="icon ion-ios7-telephone"></i>        
+          <i class="icon ion-ios7-star"></i>        
           <h4>{{tvContent.channel}} -  {{tvContent.type}}</h4> 
           <p>{{tvContent.title}}</p> 
           <p>{{tvContent.st}} - {{tvContent.et}}</p>          
