--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -9,12 +9,12 @@
 
   <ion-side-menu side="left">
     <header class="bar bar-header bar-stable">
-      <h1 class="title">Left</h1>
+      <h1 class="title">Menu</h1>
     </header>
     <ion-content class="has-header">
       <ion-list>
         <ion-item nav-clear menu-close href="#/app/providers">
-          Providers
+          TV Providers
         </ion-item>
       </ion-list>
     </ion-content>
