--- a/www/templates/options-by-providers.html
+++ b/www/templates/options-by-providers.html
@@ -1,4 +1,4 @@
-<ion-view title="TV Providers">
+<ion-view title="{{provider}}">
   <ion-nav-buttons side="left">
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
