--- a/www/templates/tvcontents.html
+++ b/www/templates/tvcontents.html
@@ -5,13 +5,13 @@
   <ion-content class="has-header">
     <div class="list">
       <a ng-repeat="tvContent in tvContents" class="item item-icon-left" href="#/app/details/{{tvContent.id}}/{{tvContent.type}}">
-        <div ng-show="tvContent.now == 0">
+        <div ng-show="tvContent.onTimeNow == false">
           <i class="icon ion-ios7-star"></i>        
           <h4>{{tvContent.channel}} - {{tvContent.type}}</h4> 
           <p>{{tvContent.title}}</p> 
           <p>{{tvContent.st}} - {{tvContent.et}}</p>          
         </div> 
-        <div ng-show="tvContent.now == 1">
+        <div ng-show="tvContent.onTimeNow == true">
           <i class="icon ion-ios7-star"></i>        
           <h4>{{tvContent.channel}} - {{tvContent.type}}</h4> 
           <p>{{tvContent.title}}</p> 
