--- a/www/templates/options-by-providers.html
+++ b/www/templates/options-by-providers.html
@@ -3,7 +3,31 @@
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
   <ion-content class="has-header">
-      <div class="list">
+  <div class="row">
+      <div class="col">
+        <a href="#/app/content-now/series/{{provider}}">
+          <img src="../img/series_icon.jpeg">
+        </a>        
+      </div>
+      <div class="col">
+        <a href="#/app/content-now/film/{{provider}}">
+          <img src="../img/films_icon.jpeg">
+        </a>        
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <a href="#/app/content-now/program/{{provider}}">
+          <img src="../img/tv_program_icon.jpeg">
+        </a>        
+      </div>
+      <div class="col">
+        <a href="#/app/channels/{{provider}}">
+          <img src="../img/channels_icon.jpeg">
+        </a>        
+      </div>
+    </div>
+      <!-- <div class="list">
       <a class="item item-icon-left" href="#/app/content-now/series/{{provider}}">
         <i class="icon ion-videocamera"></i>
         Series right now
@@ -20,6 +44,6 @@
         <i class="icon ion-monitor"></i>
         Channels
       </a>
-    </div>
+    </div> -->
   </ion-content>
 </ion-view>
