--- a/www/templates/providers.html
+++ b/www/templates/providers.html
@@ -3,11 +3,31 @@
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
   <ion-content class="has-header">
-    <div class="list">
+    <!-- <div class="list">
       <a ng-repeat="provider in providers"  class="item item-icon-left" href="#/app/options-by-providers/{{provider.name}}">
         <i class="icon ion-monitor"></i>
         {{provider.name}}
       </a>
+    </div> -->
+    <div class="row">
+      <div class="col col-33 col-offset-10">
+        <a href="#/app/options-by-providers/freeview">
+          <img src="../img/freeview_icon.png">
+        </a>        
+      </div>
     </div>
+    <div class="row">
+      <div class="col col-33 col-offset-10">
+        <a href="#/app/options-by-providers/Sky & Cable">
+          <img src="../img/sky_icon.jpeg">
+        </a>                
+      </div>
+    </div>
+<!--     <div class="row">
+      <div class="col col-33 col-offset-33">
+        <img src="../img/freeview_icon.png">
+      </div>
+    </div>
+ -->
   </ion-content>
 </ion-view>
