--- a/www/templates/options-by-providers.html
+++ b/www/templates/options-by-providers.html
@@ -4,26 +4,27 @@
   </ion-nav-buttons>
   <ion-content class="has-header">
   <div class="row">
-      <div class="col">
+      <div class="col col-50">
         <a href="#/app/content-now/series/{{provider}}">
-          <img src="../img/series_icon.jpeg">
+          <img src="../img/television.png">
         </a>        
       </div>
-      <div class="col">
+      <div class="col col-50">
         <a href="#/app/content-now/film/{{provider}}">
-          <img src="../img/films_icon.jpeg">
+          <img src="../img/tv.png">
         </a>        
       </div>
     </div>
     <div class="row">
-      <div class="col">
+      <div class="col col-50">
         <a href="#/app/content-now/program/{{provider}}">
-          <img src="../img/tv_program_icon.jpeg">
+          <img src="../img/tv.png">
         </a>        
       </div>
-      <div class="col">
+      <div class="col col-50">
         <a href="#/app/channels/{{provider}}">
-          <img src="../img/channels_icon.jpeg">
+          <img src="../img/television.png">
+          <!-- 128x128 -->
         </a>        
       </div>
     </div>
