--- a/www/templates/providers.html
+++ b/www/templates/providers.html
@@ -10,18 +10,18 @@
       </a>
     </div> -->
     <div class="row">
-      <div class="col col-33 col-offset-10">
+      <div class="col col-100">
         <a href="#/app/options-by-providers/freeview">
           <img src="../img/freeview_icon.png">
         </a>        
-      </div>
+      </div>      
     </div>
     <div class="row">
-      <div class="col col-33 col-offset-10">
+      <div class="col col-100">
         <a href="#/app/options-by-providers/Sky & Cable">
           <img src="../img/sky_icon.jpeg">
         </a>                
-      </div>
+      </div>      
     </div>
 <!--     <div class="row">
       <div class="col col-33 col-offset-33">
