--- a/www/templates/channels.html
+++ b/www/templates/channels.html
@@ -9,6 +9,142 @@
         <h4>{{channel.name}}</h4>    
       </a>
     </div> -->
+     <div class="row">
+      <div class="col col-33">
+        <a href="#/app/tvcontents/today/film4">
+          <img src="http://beta.tvlive.io/FILM4.png">
+        </a>        
+      </div>      
+      <div class="col col-33">
+        <a href="#/app/tvcontents/today/film4">
+          <img src="http://beta.tvlive.io/BBC_ONE.png">
+        </a>        
+      </div>      
+      <div class="col col-33">
+        <a href="#/app/tvcontents/today/film4">
+          <img src="http://beta.tvlive.io/BBC_TWO.png">
+        </a>        
+      </div>      
+    </div>
+    <div class="row">
+      <div class="col col-33">
+        <a href="#/app/tvcontents/today/film4">
+          <img src="http://beta.tvlive.io/BBC_THREE.png">
+        </a>                
+      </div>
+      <div class="col col-33">
+        <a href="#/app/tvcontents/today/film4">
+          <img src="http://beta.tvlive.io/BBC_FOUR.png">
+        </a>        
+      </div>      
+      <div class="col col-33">
+        <a href="#/app/tvcontents/today/film4">
+          <img src="http://beta.tvlive.io/CBEEBIES.png">
+        </a>        
+      </div>            
+    </div>
+    <div class="row">
+      <div class="col col-33">
+        <a href="#/app/tvcontents/today/film4">
+          <img src="http://beta.tvlive.io/E4.png">
+        </a>        
+      </div>      
+      <div class="col col-33">
+        <a href="#/app/tvcontents/today/film4">
+          <img src="http://beta.tvlive.io/CHANNEL_4.png">
+        </a>        
+      </div>      
+      <div class="col col-33">
+        <a href="#/app/tvcontents/today/film4">
+          <img src="http://beta.tvlive.io/CHANNEL_FIVE.png">
+        </a>        
+      </div>      
+    </div>
+    <div class="row">
+      <div class="col col-33">
+        <a href="#/app/tvcontents/today/film4">
+          <img src="http://beta.tvlive.io/FIVE_USA.png">
+        </a>                
+      </div>
+      <div class="col col-33">
+        <a href="#/app/tvcontents/today/film4">
+          <img src="http://beta.tvlive.io/DRAMA.png">
+        </a>        
+      </div>      
+      <div class="col col-33">
+        <a href="#/app/tvcontents/today/film4">
+          <img src="http://beta.tvlive.io/VIVA.png">
+        </a>        
+      </div>            
+    </div>
+    <div class="row">
+      <div class="col col-33">
+        <a href="#/app/tvcontents/today/film4">
+          <img src="http://beta.tvlive.io/YESTERDAY.png">
+        </a>        
+      </div>      
+      <div class="col col-33">
+        <a href="#/app/tvcontents/today/film4">
+          <img src="http://beta.tvlive.io/TRAVEL_CHANNEL.png">
+        </a>        
+      </div>      
+      <div class="col col-33">
+        <a href="#/app/tvcontents/today/film4">
+          <img src="http://beta.tvlive.io/THE_COMMUNITY_CHANNEL.png">
+        </a>        
+      </div>      
+    </div>
+    <div class="row">
+      <div class="col col-33">
+        <a href="#/app/tvcontents/today/film4">
+          <img src="http://beta.tvlive.io/4MUSIC.png">
+        </a>                
+      </div>
+      <div class="col col-33">
+        <a href="#/app/tvcontents/today/film4">
+          <img src="http://beta.tvlive.io/S4C1.png">
+        </a>        
+      </div>      
+      <div class="col col-33">
+        <a href="#/app/tvcontents/today/film4">
+          <img src="http://beta.tvlive.io/FOOD_NETWORK.png">
+        </a>        
+      </div>            
+    </div>
+    <div class="row">
+      <div class="col col-33">
+        <a href="#/app/tvcontents/today/film4">
+          <img src="http://beta.tvlive.io/GEMS.png">
+        </a>        
+      </div>      
+      <div class="col col-33">
+        <a href="#/app/tvcontents/today/film4">
+          <img src="http://beta.tvlive.io/LONDON-LIVE.png">
+        </a>        
+      </div>      
+      <div class="col col-33">
+        <a href="#/app/tvcontents/today/film4">
+          <img src="http://beta.tvlive.io/ITV+1.png">
+        </a>        
+      </div>      
+    </div>
+    <div class="row">
+      <div class="col col-33">
+        <a href="#/app/tvcontents/today/film4">
+          <img src="http://beta.tvlive.io/ITV2.png">
+        </a>                
+      </div>
+      <div class="col col-33">
+        <a href="#/app/tvcontents/today/film4">
+          <img src="http://beta.tvlive.io/ITVHD.png">
+        </a>        
+      </div>      
+      <div class="col col-33">
+        <a href="#/app/tvcontents/today/film4">
+          <img src="http://beta.tvlive.io/6_MUSIC.png">
+        </a>        
+      </div>            
+    </div> 
     <div class="row">
       <div class="col col-33">
         <a href="#/app/tvcontents/today/film4">
@@ -144,7 +280,7 @@
           <img src="http://beta.tvlive.io/6_MUSIC.png">
         </a>        
       </div>            
-    </div> s
+    </div> 
   </ion-content>
 </ion-view>
 
