--- a/www/templates/options-by-providers.html
+++ b/www/templates/options-by-providers.html
@@ -6,45 +6,27 @@
   <div class="row">
       <div class="col col-50">
         <a href="#/app/content-now/series/{{provider}}">
-          <img src="../img/television.png">
+          <img src="../img/tvliveio_icono_series.png">
         </a>        
       </div>
       <div class="col col-50">
         <a href="#/app/content-now/film/{{provider}}">
-          <img src="../img/tv.png">
+          <img src="../img/tvliveio_icono_films.png">
         </a>        
       </div>
     </div>
     <div class="row">
       <div class="col col-50">
         <a href="#/app/content-now/program/{{provider}}">
-          <img src="../img/tv.png">
+          <img src="../img/tvliveio_icono_programs.png">
         </a>        
       </div>
       <div class="col col-50">
         <a href="#/app/channels/{{provider}}">
-          <img src="../img/television.png">
+          <img src="../img/tvliveio_icono_channels.png">
           <!-- 128x128 -->
         </a>        
       </div>
-    </div>
-      <!-- <div class="list">
-      <a class="item item-icon-left" href="#/app/content-now/series/{{provider}}">
-        <i class="icon ion-videocamera"></i>
-        Series right now
-      </a>
-      <a class="item item-icon-left" href="#/app/content-now/film/{{provider}}">
-        <i class="icon ion-videocamera"></i>
-        Films right now
-      </a>
-      <a class="item item-icon-left" href="#/app/content-now/program/{{provider}}">
-        <i class="icon ion-videocamera"></i>
-        Programs right now
-      </a>
-      <a class="item item-icon-left" href="#/app/channels/{{provider}}">
-        <i class="icon ion-monitor"></i>
-        Channels
-      </a>
-    </div> -->
+    </div>      
   </ion-content>
 </ion-view>
