--- a/www/templates/tvcontents.html
+++ b/www/templates/tvcontents.html
@@ -5,7 +5,7 @@
   <ion-content class="has-header">
     <div class="list">
       <a ng-repeat="tvContent in tvContents" class="item item-thumbnail-left" href="#/app/details/{{tvContent.id}}/{{tvContent.type}}">
-          <img ng-src="http://beta.tvlive.io/FILM4.png">          
+          <img ng-src="http://beta.tvlive.io{{tvContent.channelImageURL}}">          
           <h4>{{tvContent.title}}</h4>           
           <div class="bara" ng-show="tvContent.perCentTimeElapsed">
             <progress max="100" value="{{tvContent.perCentTimeElapsed}}"></progress>
