--- a/www/templates/options-by-providers.html
+++ b/www/templates/options-by-providers.html
@@ -6,24 +6,24 @@
   <div class="row">
       <div class="col col-50">
         <a href="#/app/content-now/series/{{provider}}">
-          <img src="../img/tvliveio_icono_series.png">
+          <img src="../img/series_icon.png">
         </a>        
       </div>
       <div class="col col-50">
         <a href="#/app/content-now/film/{{provider}}">
-          <img src="../img/tvliveio_icono_films.png">
+          <img src="../img/films_icon.png">
         </a>        
       </div>
     </div>
     <div class="row">
       <div class="col col-50">
         <a href="#/app/content-now/program/{{provider}}">
-          <img src="../img/tvliveio_icono_programs.png">
+          <img src="../img/tv_program_icon.png">
         </a>        
       </div>
       <div class="col col-50">
         <a href="#/app/channels/{{provider}}">
-          <img src="../img/tvliveio_icono_channels.png">
+          <img src="../img/channels_icon.png">
           <!-- 128x128 -->
         </a>        
       </div>
