--- a/www/templates/tvcontents.html
+++ b/www/templates/tvcontents.html
@@ -3,24 +3,31 @@
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
   <ion-content class="has-header">
-    <div class="list">
-      <a ng-repeat="tvContent in tvContents" class="item item-thumbnail-left" href="#/app/details/{{tvContent.id}}/{{tvContent.type}}">
-          <img ng-src="http://beta.tvlive.io{{tvContent.channelImageURL}}">          
-          <h4>{{tvContent.title}}</h4>           
-          <div class="bara" ng-show="tvContent.perCentTimeElapsed">
-            <progress max="100" value="{{tvContent.perCentTimeElapsed}}"></progress>
+     <a ng-repeat="tvContent in tvContents" class="item"  href="#/app/details/{{tvContent.id}}/{{tvContent.type}}">
+          
+          <div class="row">
+            <div class="col col-33">
+              <img ng-src="http://beta.tvlive.io{{tvContent.channelImageURL}}" alt="{{tvContent.channel}}">          
+              <p><small>{{tvContent.st}} - {{tvContent.et}}</small></p>          
+              <div ng-show="tvContent.type == 'Series'">
+                  <span class="span-series">{{tvContent.type}}</span>          
+                </div>  
+                <div ng-show="tvContent.type == 'Program'">
+                  <span class="span-program">{{tvContent.type}}</span>          
+                </div>  
+                <div ng-show="tvContent.type == 'Film'">
+                  <span class="span-film">{{tvContent.type}}</span>          
+                </div>
+            </div>    
+            <div class="col col-66">
+                <div>
+                  <h3>{{tvContent.title}}</h3>           
+                </div>
+                <div ng-show="tvContent.perCentTimeElapsed">
+                  <progress max="100" value="{{tvContent.perCentTimeElapsed}}"></progress>
+                </div>                                            
+            </div>
           </div>  
-          <p>{{tvContent.st}} - {{tvContent.et}}</p>          
-          <div ng-show="tvContent.type == 'Series'">
-            <span class="badge badge-energized">{{tvContent.type}}</span>          
-          </div>  
-          <div ng-show="tvContent.type == 'Program'">
-            <span class="badge badge-assertive">{{tvContent.type}}</span>          
-          </div>  
-          <div ng-show="tvContent.type == 'Film'">
-            <span class="badge badge-balanced">{{tvContent.type}}</span>          
-          </div>  
-      </a>
-  </div>
+   </a>    
   </ion-content>
 </ion-view>
