--- a/www/templates/details-film.html
+++ b/www/templates/details-film.html
@@ -3,7 +3,34 @@
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
   <ion-content class="has-header">
-  <div class="list">
+    <div class="row">
+            <div class="col col-33">
+              <img ng-src="http://beta.tvlive.io{{details.channelImageURL}}" alt="{{details.channel}}">          
+              <p><small>{{details.st}} - {{details.et}}</small></p>                        
+            </div>    
+            <div class="col col-66">
+                <div>
+                  <h4 class="content-title">{{details.film.title}}</h4>           
+                </div>
+                <div ng-show="details.perCentTimeElapsed" class="progress-bar">
+                  <progress max="100" value="{{details.perCentTimeElapsed}}"></progress>
+                </div>                                            
+            </div>
+    </div>  
+    <div class="row">
+      <div ng-show="details.film.description" class="col content-description">  
+        <h5>{{details.film.description}}</h5>
+        <span ng-show="details.film.year" class="item-note"> 
+          {{details.film.year}}
+      </span>
+      </div>
+    </div>
+      <div ng-repeat="actor in details.film.actors" class="row">
+        <div class="col film-actor">
+          <i class="icon ion-person-stalker"></i><h4>{{actor}}</h4>      
+        </div>
+    </div>
+<!--   <div class="list">
     <div class="item item-icon-left" href="#">
      <i class="icon ion-ios7-videocam"></i>
       {{details.film.title}}
@@ -23,6 +50,9 @@
         <h4>{{actor}}</h4>
     </a>  
     
-  </div>
+  </div> -->
   </ion-content>
+  <ion-footer-bar align-title="center" class="bar-assertive">
+    <h1 class="title">Beta</h1>
+  </ion-footer-bar>
 </ion-view>
