--- a/www/templates/options-by-providers.html
+++ b/www/templates/options-by-providers.html
@@ -4,29 +4,32 @@
   </ion-nav-buttons>
   <ion-content class="has-header">
   <div class="row">
-      <div class="col col-50">
+      <div class="col col-50" >
         <a href="#/app/content-now/series/{{provider}}">
-          <img src="../img/series_icon.png">
+          <img  src="../img/series_icon.png">
         </a>        
       </div>
       <div class="col col-50">
         <a href="#/app/content-now/film/{{provider}}">
-          <img src="../img/films_icon.png">
+          <img  src="../img/films_icon.png">
         </a>        
       </div>
     </div>
-    <div class="row">
-      <div class="col col-50">
-        <a href="#/app/content-now/program/{{provider}}">
-          <img src="../img/tv_program_icon.png">
-        </a>        
-      </div>
-      <div class="col col-50">
-        <a href="#/app/channels/{{provider}}">
-          <img src="../img/channels_icon.png">
-          <!-- 128x128 -->
-        </a>        
-      </div>
-    </div>      
+  <div class="row">
+    <div class="col col-50">
+      <a href="#/app/content-now/program/{{provider}}">
+        <img src="../img/tv_program_icon.png">
+      </a>        
+    </div>
+    <div class="col col-50">
+      <a href="#/app/channels/{{provider}}">
+        <img src="../img/channels_icon.png">
+        <!-- 128x128 -->
+      </a>        
+    </div>
+  </div>      
   </ion-content>
+  <ion-footer-bar align-title="center" class="bar-assertive">
+    <h1 class="title">Beta</h1>
+  </ion-footer-bar>
 </ion-view>
