--- a/www/templates/channels.html
+++ b/www/templates/channels.html
@@ -22,5 +22,8 @@
       </div>      
     </div>      
   </ion-content>
+  <ion-footer-bar align-title="center" class="bar-assertive">
+    <h1 class="title">Beta</h1>
+  </ion-footer-bar>
 </ion-view>
 
