--- a/www/templates/details-program.html
+++ b/www/templates/details-program.html
@@ -3,18 +3,28 @@
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
   <ion-content class="has-header">
-  <div class="list">
-    <div class="item item-icon-left">
-      <i class="icon ion-ios7-videocam"></i>
-      {{details.program.title}}</h4>
+    <div class="row">
+            <div class="col col-33">
+              <img ng-src="http://beta.tvlive.io{{details.channelImageURL}}" alt="{{details.channel}}">          
+              <p><small>{{details.st}} - {{details.et}}</small></p>                        
+            </div>    
+            <div class="col col-66">
+                <div>
+                  <h4 class="content-title">{{details.program.title}}</h4§>           
+                </div>
+                <div ng-show="details.perCentTimeElapsed" class="progress-bar">
+                  <progress max="100" value="{{details.perCentTimeElapsed}}"></progress>
+                </div>                                            
+            </div>
+    </div>  
+    <div class="row">
+      <div ng-show="details.program.description" class="col content-description">  
+      <h5>{{details.program.description}}</h5>
     </div>
-    <div class="item item-icon-left">
-      <i class="icon ion-ios7-time-outline"></i>
-      <h4>{{details.st}} - {{details.et}}</h4>
-    </div>
-    <div ng-show="details.program.description" class="item item-text-wrap">  
-      <h4>{{details.program.description}}</h4>
     </div>
   </div>
   </ion-content>
+  <ion-footer-bar align-title="center" class="bar-assertive">
+    <h1 class="title">Beta</h1>
+  </ion-footer-bar>
 </ion-view>
