--- a/www/templates/details-series.html
+++ b/www/templates/details-series.html
@@ -3,34 +3,45 @@
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
   <ion-content class="has-header">
-  <div class="list">
-    <div class="item item-icon-left">
-      <i class="icon ion-ios7-videocam"></i>
-      {{details.series.serieTitle}}
+    <div class="row">
+            <div class="col col-33">
+              <img ng-src="http://beta.tvlive.io{{details.channelImageURL}}" alt="{{details.channel}}">          
+              <p><small>{{details.st}} - {{details.et}}</small></p>                        
+            </div>    
+            <div class="col col-66">
+                <div>
+                  <h4 class="content-title">{{details.series.serieTitle}}</h4>           
+                  <h5>{{details.series.episodeTitle}}</h5>
+                </div>
+
+                <div ng-show="details.perCentTimeElapsed" class="progress-bar">
+                  <progress max="100" value="{{details.perCentTimeElapsed}}"></progress>
+                </div>                                            
+            </div>
+    </div>  
+    <div class="row">
+      <div ng-show="details.series.description" class="col content-description">  
+        <h5>{{details.series.description}}</h5>
+      </div>
     </div>
-    <div ng-show="details.series.episodeTitle" class="item item-icon-left">
-      <i class="icon ion-ios7-paper"></i>
-      <h4>Episode - {{details.series.episodeTitle}}</h4>
+
+    <div class="row">
+        <div class"col" ng-show="details.series.seasonNumber">
+          <h5>Season {{details.series.seasonNumber}}</h5>
+        </div>      
     </div>
-    <div ng-show="details.series.seasonNumber" class="item item-icon-left">
-      <i class="icon ion-ios7-calendar"></i>
-      <h4>Season - {{details.series.seasonNumber}}</h4>
+    <div class="row">
+        <div class"col" ng-show="details.series.episodeNumber">
+          <h5>Episode Number {{details.series.episodeNumber}}</h5>
+        </div>      
     </div>
-    <div ng-show="details.series.episodeNumber" class="item item-icon-left">
-      <i class="icon ion-ios7-calendar"></i>
-      <h4>Episode Number - {{details.series.episodeNumber}}</h4>
+    <div class="row">
+        <div class"col" ng-show="details.series.totalNumber">
+          <h5>Total Number - {{details.series.totalNumber}}</h5>
+        </div>      
     </div>
-    <div ng-show="details.series.totalNumber" class="item item-icon-left">
-      <i class="icon ion-ios7-calendar"></i>
-      <h4>Total Number - {{details.series.totalNumber}}</h4>
-    </div>
-    <div class="item item-icon-left">
-      <i class="icon ion-ios7-time-outline"></i>
-      <h4>{{details.st}} - {{details.et}}</h4>
-    </div>
-    <div ng-show="details.series.description" class="item item-text-wrap">  
-      <h4>{{details.series.description}}</h4>
-    </div>
-  </div>
   </ion-content>
+  <ion-footer-bar align-title="center" class="bar-assertive">
+    <h1 class="title">Beta</h1>
+  </ion-footer-bar>
 </ion-view>
