Changing the colour for the past content

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -50,8 +50,8 @@ border: dashed;
 .progress-bar {
 	padding-left: 15px;
 	padding-right: 15px;
+}
 
-	
-
-
+.tv-content-passed {
+	background-color: #BDBDBD;
 }
