Changing beta to prototype

--- a/www/templates/tvcontents.html
+++ b/www/templates/tvcontents.html
@@ -23,7 +23,7 @@
                 <div>
                   <h3 class="content-title">{{tvContent.title}}</h3>           
                 </div>
-                <div ng-show="tvContent.perCentTimeElapsed" class="progress-bar">
+                <div ng-show="tvContent.perCentTimeElapsed" class="progress-bar" focus="true">
                   <progress max="100" value="{{tvContent.perCentTimeElapsed}}"></progress>
                 </div>                                            
             </div>
@@ -31,6 +31,6 @@
    </a>    
   </ion-content>
   <ion-footer-bar align-title="center" class="bar-assertive">
-    <h1 class="title">Beta</h1>
+    <h1 class="title">Prototype</h1>
   </ion-footer-bar>
 </ion-view>
