--- a/www/templates/current.html
+++ b/www/templates/current.html
@@ -22,6 +22,6 @@
   </div>   
   </ion-content>
   <ion-footer-bar align-title="center" class="bar-assertive">
-    <h1 class="title">Beta</h1>
+    <h1 class="title">Prototype</h1>
   </ion-footer-bar>
 </ion-view>
