--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -19,7 +19,7 @@
       </ion-list>
     </ion-content>
     <ion-footer-bar align-title="center" class="bar-assertive">
-    <h1 class="title">Beta</h1>
+    <h1 class="title">Prototype</h1>
   </ion-footer-bar>
   </ion-side-menu>
 </ion-side-menus>
